Alteracao na tela Pais e adição de classe Msg

--- a/HotelCetafet/HotelCetafet.csproj
+++ b/HotelCetafet/HotelCetafet.csproj
@@ -57,6 +57,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bdHotelCetafestDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>bdHotelCetafestDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Modelo\Cliente.cs">
       <DependentUpon>ModelHotelCetafest.tt</DependentUpon>
     </Compile>
@@ -82,6 +87,13 @@
     <Compile Include="Modelo\Profissao.cs">
       <DependentUpon>ModelHotelCetafest.tt</DependentUpon>
     </Compile>
+    <Compile Include="Util\Msg.cs" />
+    <Compile Include="View\FormProfissao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormProfissao.Designer.cs">
+      <DependentUpon>FormProfissao.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FrmCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +114,9 @@
     <Compile Include="View\FrmPais.Designer.cs">
       <DependentUpon>FrmPais.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\FormProfissao.resx">
+      <DependentUpon>FormProfissao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FrmCliente.resx">
       <DependentUpon>FrmCliente.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +139,17 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ModelHotelCetafest.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="bdHotelCetafestDataSet.xsc">
+      <DependentUpon>bdHotelCetafestDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="bdHotelCetafestDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>bdHotelCetafestDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="bdHotelCetafestDataSet.xss">
+      <DependentUpon>bdHotelCetafestDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Modelo\ModelHotelCetafest.edmx.diagram">
       <DependentUpon>ModelHotelCetafest.edmx</DependentUpon>
     </None>
